--- a/scd/CMakeLists.txt
+++ b/scd/CMakeLists.txt
@@ -10,17 +10,21 @@ add_library (SCD_SCD OBJECT
 add_library (SCD_SCD_Evaluator OBJECT
   "scd_evaluator.cpp")
 
-add_executable(V2SCD
-  "v_2_scd.cpp"
+add_library (SCD_V2SCD OBJECT
+  "v_2_scd.cpp")
+
+add_executable(V2SCD_Main
+  "v_2_scd_main.cpp"
+  "$<TARGET_OBJECTS:SCD_V2SCD>"
   "$<TARGET_OBJECTS:SCD_ParseNetlist>"
   "$<TARGET_OBJECTS:SCD_Scheduling>"
   "$<TARGET_OBJECTS:SCD_SCD>"
   "$<TARGET_OBJECTS:Util_Log>")
 
 if (Boost_FOUND)
-  target_link_libraries(V2SCD ${Boost_LIBRARIES})
+  target_link_libraries(V2SCD_Main ${Boost_LIBRARIES})
 endif (Boost_FOUND)
-target_link_libraries(V2SCD -lrt)
+#target_link_libraries(V2SCD -lrt)
 
 add_executable(SCD_Evaluator_Main
   "scd_evaluator_main.cpp"
@@ -37,7 +41,7 @@ endif (Boost_FOUND)
 if (OPENSSL_FOUND)
   target_link_libraries(SCD_Evaluator_Main ${OPENSSL_LIBRARIES})
 endif (OPENSSL_FOUND)
-target_link_libraries(SCD_Evaluator_Main -lrt)
+#target_link_libraries(SCD_Evaluator_Main -lrt)
 
 add_executable(SCD_Evaluator_Test
   "scd_evaluator_test.cpp"
