add text to binary conversion

--- a/garbled_circuit/CMakeLists.txt
+++ b/garbled_circuit/CMakeLists.txt
@@ -24,8 +24,8 @@ if (Boost_FOUND)
 endif (Boost_FOUND)
 target_link_libraries(TinyGarble -lrt)
 
-add_executable(RWT
-  "test_file_rw_speed.cpp"
+add_executable(txt2bin
+  "txt2bin.cpp"
   "$<TARGET_OBJECTS:Garbled_Circuit_Garbled_Circuit>"
   "$<TARGET_OBJECTS:Garbled_Circuit_Garbled_Circuit_Low_Mem>"
   "$<TARGET_OBJECTS:Crypto_BN>"
@@ -37,12 +37,12 @@ add_executable(RWT
   "$<TARGET_OBJECTS:Util_Log>")
 
 if (OPENSSL_FOUND)
-	target_link_libraries(RWT ${OPENSSL_LIBRARIES})
+	target_link_libraries(txt2bin ${OPENSSL_LIBRARIES})
 endif (OPENSSL_FOUND)
 if (Boost_FOUND)
-  target_link_libraries(RWT ${Boost_LIBRARIES})
+  target_link_libraries(txt2bin ${Boost_LIBRARIES})
 endif (Boost_FOUND)
-target_link_libraries(RWT -lrt)
+target_link_libraries(txt2bin -lrt)
 
 add_executable(Garbled_Circuit_Test
   "garbled_circuit_test.cpp"
