--- a/scd/CMakeLists.txt
+++ b/scd/CMakeLists.txt
@@ -19,8 +19,17 @@ add_executable(V2SCD_Main
   "$<TARGET_OBJECTS:SCD_ParseNetlist>"
   "$<TARGET_OBJECTS:SCD_Scheduling>"
   "$<TARGET_OBJECTS:SCD_SCD>"
+  "$<TARGET_OBJECTS:Crypto_BN>"
+  "$<TARGET_OBJECTS:Crypto_OT>"
+  "$<TARGET_OBJECTS:Crypto_OT_Extension>"
+  "$<TARGET_OBJECTS:SCD_SCD>"
+  "$<TARGET_OBJECTS:Util_Util>"
+  "$<TARGET_OBJECTS:TCPIP_TCPIP>"
   "$<TARGET_OBJECTS:Util_Log>")
-
+ 
+if (OPENSSL_FOUND)
+	target_link_libraries(V2SCD_Main ${OPENSSL_LIBRARIES})
+endif (OPENSSL_FOUND)
 if (Boost_FOUND)
   target_link_libraries(V2SCD_Main ${Boost_LIBRARIES})
 endif (Boost_FOUND)
