generate hscd files during build

--- a/scd/V2SCD_ALL.sh.in
+++ b/scd/V2SCD_ALL.sh.in
@@ -1,9 +1,11 @@
 #!/bin/bash
 
-
+mkdir hw_aclrtr
 for verilogfile in @CMAKE_CURRENT_BINARY_DIR@/netlists/*.v
 do
+  hw_dir=$(basename "${verilogfile%.*}")
   scdfile=${verilogfile%.*}.scd
-  @CMAKE_CURRENT_BINARY_DIR@/V2SCD_Main -i $verilogfile -o $scdfile --log2std &
+  mkdir -p hw_aclrtr/$hw_dir
+  @CMAKE_CURRENT_BINARY_DIR@/V2SCD_Main -i $verilogfile -o $scdfile -w hw_aclrtr/$hw_dir/netlist.hscd --log2std &
 done
 wait
